--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Traded to Steven</td>
+<td width=50>11/30</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -239,8 +239,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Trey Palmer/Latavius Murray</td>
+<td width=50>12/3</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -361,5 +361,10 @@ Grant - Sam LaPorta
 <td width=600>
 Steven - Dalton Schultz<br>
 Mike - Dorian Thompson-Robinson
+</td></tr>
+<tr><td width=50>11/30</td>
+<td width=600>
+Rich - Jaxon Smith-Njigba, Dalton Schultz (cut Deuce Vaughn)<br>
+Steven - Jonathan Taylor, pickup ()
 </td></tr>
 </table>
