--- a/roster.html
+++ b/roster.html
@@ -40,7 +40,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>HOU</td><td>Dameon Pierce          </td></tr>
-<tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td>CAR</td><td>Miles Sanders          </td></tr>
 <tr><td>PHI</td><td>D'Andre Swift          </td></tr>
 <tr><td>MIA</td><td>Raheem Mostert         </td></tr>
@@ -51,13 +50,14 @@
 <tr><td>CAR</td><td>Adam Thielen           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
+<tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td>PIT</td><td>Chris Boswell          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dalton Kincaid         </td></tr>
 <tr><td>CIN</td><td>Chase Brown            </td></tr>
-<tr><td>DAL</td><td>Deuce Vaughn           </td></tr>
+<tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -155,17 +155,16 @@
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>IND</td><td>Zack Moss              </td></tr>
 <tr><td>MIA</td><td>Jeff Wilson            </td></tr>
+<tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>AJ Brown               </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>HOU</td><td>Dalton Schultz         </td></tr>
 <tr><td>ARI</td><td>Trey McBride           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Jason Myers            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>SEA</td><td>Jaxon Smith-Njigba     </td></tr>
 <tr><td>SEA</td><td>Zach Charbonnet        </td></tr>
 <tr><td>JAX</td><td>Tank Bigsby            </td></tr>
 <tr><td>TEN</td><td>Tyjae Spears           </td></tr>
@@ -213,7 +212,6 @@
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
-<tr><td>BUF</td><td>Latavius Murray        </td></tr>
 <tr><td>HOU</td><td>Devin Singletary       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
@@ -230,6 +228,7 @@
 <tr><td>MIN</td><td>Jordan Addison         </td></tr>
 <tr><td>DEN</td><td>Jaleel McLaughlin      </td></tr>
 <tr><td>CLE</td><td>Dorian ThompsonRobinson</td></tr>
+<tr><td> TB</td><td>Trey Palmer            </td></tr>
 </table>
 </td>
 <td valign=top>
