--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,119 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 12)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 13)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 875</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3> 845</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Desmond Ridder         </td><td><font size=3> 950</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Derek Carr             </td><td><font size=3> 925</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Mac Jones              </td><td><font size=3> 700</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 640</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 465</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 540</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 435</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Jake Browning          </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Mike White             </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Jameis Winston         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jake Browning          </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 420</td></tr>
 <tr><td><font size=3>Joshua Kelley          </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>Royce Freeman          </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Chuba Hubbard          </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Andrew Beck            </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>Rico Dowdle            </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>Latavius Murray        </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Salvon Ahmed           </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3> 140</td></tr>
 <tr><td><font size=3>Craig Reynolds         </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Matt Breida            </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Darrynton Evans        </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Tony Jones             </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Clyde Edwards-Helaire  </td><td><font size=3>  75</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
 <tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 730</td></tr>
 <tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 685</td></tr>
-<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 605</td></tr>
+<tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>Brandin Cooks          </td><td><font size=3> 525</td></tr>
 <tr><td><font size=3>Jahan Dotson           </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>Brandin Cooks          </td><td><font size=3> 445</td></tr>
 <tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 435</td></tr>
 <tr><td><font size=3>Rondale Moore          </td><td><font size=3> 375</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>Tutu Atwell            </td><td><font size=3> 350</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 330</td></tr>
 <tr><td><font size=3>Khalil Shakir          </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>DJ Chark               </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Noah Brown             </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>DJ Chark               </td><td><font size=3> 290</td></tr>
 <tr><td><font size=3>Odell Beckham          </td><td><font size=3> 280</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Donald Parham          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Trey McBride           </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Mark Andrews           </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Donald Parham          </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Cade Otton             </td><td><font size=3> 215</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Darren Waller          </td><td><font size=3> 195</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 190</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Pat Freiermuth         </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Harrison Bryant        </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>10)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Drew Sample            </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Andrew Ogletree        </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Stone Smartt           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Tommy Tremble          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>MyCole Pruitt          </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jimmy Graham           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Noah Gray              </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Andrew Ogletree        </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
 <tr><td><font size=3>Cairo Santos           </td><td><font size=3> 960</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 865</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 845</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 805</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 800</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 775</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 940</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 920</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 835</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 830</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 805</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 745</td></tr>
 <tr><td><font size=3>Brett Maher            </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 730</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 730</td></tr>
 <tr><td><font size=3>Greg Joseph            </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 655</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 660</td></tr>
 <tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 610</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 595</td></tr>
 <tr><td><font size=3>Graham Gano            </td><td><font size=3> 485</td></tr>
-<tr><td><font size=3>Lucas Havrisik         </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Lucas Havrisik         </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>Matt Ammendola         </td><td><font size=3> 225</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Michael Wilson         </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>Xavier Gipson          </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>Derius Davis           </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>Jake Bobo              </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Xavier Gipson          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Charlie Jones          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Trey Palmer            </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jalin Hyatt            </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Luke Schoonmaker       </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Michael Mayer          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Parker Washington      </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Andrei Iosivas         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Demario Douglas        </td><td><font size=3>  90</td></tr>
 <tr><td><font size=3>Ronnie Bell            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Quentin Johnston       </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Tucker Kraft           </td><td><font size=3>  75</td></tr>
 </table>
 </td></tr></table>
