--- a/pickups.html
+++ b/pickups.html
@@ -345,7 +345,8 @@ States - Ty Chandler/Stetson Bennett (11/15)<br>
 Mike - Brandon McManus/Josh Palmer (11/19)<br>
 Grant - Jayden Reed/Deshaun Watson (11/21)<br>
 Matthew - Baker Mayfield/Joe Burrow (11/23)<br>
-Steven - Trey McBride/Mark Andrews (11/29)
+Steven - Trey McBride/Mark Andrews (11/29)<br>
+Grant - Jake Browning/Cam Akers (12/5)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
