--- a/roster.html
+++ b/roster.html
@@ -236,10 +236,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td>MIN</td><td>Joshua Dobbs           </td></tr>
+<tr><td>CIN</td><td>Jake Browning          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
-<tr><td>MIN</td><td>Cam Akers              </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
