--- a/pickups.html
+++ b/pickups.html
@@ -346,7 +346,8 @@ Mike - Brandon McManus/Josh Palmer (11/19)<br>
 Grant - Jayden Reed/Deshaun Watson (11/21)<br>
 Matthew - Baker Mayfield/Joe Burrow (11/23)<br>
 Steven - Trey McBride/Mark Andrews (11/29)<br>
-Grant - Jake Browning/Cam Akers (12/5)
+Grant - Jake Browning/Cam Akers (12/5)<br>
+States - Isaiah Likely/Luke Musgrave (12/9)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
@@ -367,5 +368,10 @@ Mike - Dorian Thompson-Robinson
 <td width=600>
 Rich - Jaxon Smith-Njigba, Dalton Schultz (cut Deuce Vaughn)<br>
 Steven - Jonathan Taylor, pickup ()
+</td></tr>
+<tr><td width=50>12/8</td>
+<td width=600>
+Rich - Courtland Sutton<br>
+Matthew - Brock Purdy
 </td></tr>
 </table>
