--- a/roster.html
+++ b/roster.html
@@ -36,7 +36,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Rich (2)</b></font></td></tr>
 <tr><td> KC</td><td>Patrick Mahomes        </td></tr>
-<tr><td> SF</td><td>Brock Purdy            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td>HOU</td><td>Dameon Pierce          </td></tr>
@@ -48,6 +47,7 @@
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>ARI</td><td>Marquise Brown         </td></tr>
 <tr><td>CAR</td><td>Adam Thielen           </td></tr>
+<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td>HOU</td><td>Dalton Schultz         </td></tr>
@@ -135,13 +135,13 @@
 <tr><td> KC</td><td>Kadarius Toney         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Hayden Hurst           </td></tr>
+<tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Matt Gay               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Bryce Young            </td></tr>
 <tr><td> SF</td><td>Jake Moody             </td></tr>
 <tr><td> NO</td><td>Kendre Miller          </td></tr>
-<tr><td> GB</td><td>Luke Musgrave          </td></tr>
 <tr><td> TB</td><td>Sean Tucker            </td></tr>
 <tr><td>LAR</td><td>Zach Evans             </td></tr>
 </table>
@@ -266,6 +266,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>DEN</td><td>Russell Wilson         </td></tr>
 <tr><td> TB</td><td>Baker Mayfield         </td></tr>
+<tr><td> SF</td><td>Brock Purdy            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
@@ -277,7 +278,6 @@
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>BUF</td><td>Gabe Davis             </td></tr>
-<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
