--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
 <a href="week13.html"><b>13</b></a>
-<a href="week14.html"><b>14P</b></a><br>
+<a href="week14.html"><b>14</b></a>
+<a href="week15.html"><b>15P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -72,42 +73,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Randy(7)</font></td>
-    <td><font size=2>11</font></td>
+    <td><font size=2>12</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>9100</font></td>
-    <td><font size=2>6610</font></td>
+    <td><font size=2>9805</font></td>
+    <td><font size=2>6990</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(3)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8585</font></td>
-    <td><font size=2>8340</font></td>
-    <td><font size=2>1000</font></td>
+    <td><font size=2>9680</font></td>
+    <td><font size=2>8810</font></td>
+    <td><font size=2>1095</font></td>
     <td><font size=2>300</font></td>
-    <td><font size=2>4</font></td>
-<tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7375</font></td>
-    <td><font size=2>7195</font></td>
-    <td><font size=2>850</font></td>
-    <td><font size=2>225</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>5</font></td>
 <tr><td><font size=2>States(5)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>7250</font></td>
-    <td><font size=2>7735</font></td>
+    <td><font size=2>7820</font></td>
+    <td><font size=2>8120</font></td>
     <td><font size=2>1060</font></td>
     <td><font size=2>230</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7760</font></td>
+    <td><font size=2>7765</font></td>
+    <td><font size=2>850</font></td>
+    <td><font size=2>225</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>8025</font></td>
-    <td><font size=2>8855</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>8650</font></td>
+    <td><font size=2>9505</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td>
@@ -121,41 +122,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>7475</font></td>
-    <td><font size=2>6840</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>7740</font></td>
+    <td><font size=2>7295</font></td>
     <td><font size=2>915</font></td>
-    <td><font size=2>345</font></td>
+    <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(4)</font></td>
-    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8555</font></td>
-    <td><font size=2>8340</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9010</font></td>
+    <td><font size=2>8605</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9260</font></td>
-    <td><font size=2>9190</font></td>
+    <td><font size=2>9910</font></td>
+    <td><font size=2>9815</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>6575</font></td>
-    <td><font size=2>7505</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7045</font></td>
+    <td><font size=2>8600</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>6305</font></td>
-    <td><font size=2>7895</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>6685</font></td>
+    <td><font size=2>8600</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>320</font></td>
     <td><font size=2>0</font></td>
