--- a/thousand.html
+++ b/thousand.html
@@ -597,6 +597,12 @@
     <td>1095</td>
     <td>John</td>
     <td>960</td></tr>
+<tr><td>2023</td>
+    <td>Week 14</td>
+    <td>Sam Edwards</td>
+    <td>1095</td>
+    <td>Rich</td>
+    <td>470</td></tr>
 <tr><td>2009</td>
     <td>Week 11</td>
     <td>Grant Mydland</td>
