--- a/pickups.html
+++ b/pickups.html
@@ -347,7 +347,8 @@ Grant - Jayden Reed/Deshaun Watson (11/21)<br>
 Matthew - Baker Mayfield/Joe Burrow (11/23)<br>
 Steven - Trey McBride/Mark Andrews (11/29)<br>
 Grant - Jake Browning/Cam Akers (12/5)<br>
-States - Isaiah Likely/Luke Musgrave (12/9)
+States - Isaiah Likely/Luke Musgrave (12/9)<br>
+States - Nick Mullens/Justin Herbert (12/13)
 </td></tr>
 <tr><td width=50>10/4</td>
 <td width=600>
