--- a/roster.html
+++ b/roster.html
@@ -121,7 +121,7 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (5)</b></font></td></tr>
-<tr><td>LAC</td><td>Justin Herbert         </td></tr>
+<tr><td>MIN</td><td>Nick Mullens           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
