--- a/roster.html
+++ b/roster.html
@@ -104,6 +104,7 @@
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
+<tr><td> NE</td><td>Ezekiel Elliott        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
@@ -115,7 +116,6 @@
 <tr><td>NYJ</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Blake Grupe            </td></tr>
-<tr><td>HOU</td><td>Tank Dell              </td></tr>
 </table>
 </td>
 <td valign=top>
