--- a/roster.html
+++ b/roster.html
@@ -133,8 +133,8 @@
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>PIT</td><td>George Pickens         </td></tr>
 <tr><td> KC</td><td>Kadarius Toney         </td></tr>
+<tr><td>HOU</td><td>Noah Brown             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CAR</td><td>Hayden Hurst           </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Matt Gay               </td></tr>
