--- a/pickups.html
+++ b/pickups.html
@@ -158,8 +158,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Josh Palmer/Kadarius Toney</td>
+<td width=50>12/23</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
