--- a/roster.html
+++ b/roster.html
@@ -132,8 +132,8 @@
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>PIT</td><td>George Pickens         </td></tr>
-<tr><td> KC</td><td>Kadarius Toney         </td></tr>
 <tr><td>HOU</td><td>Noah Brown             </td></tr>
+<tr><td>LAC</td><td>Josh Palmer            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td height=9></td><td></td></tr>
