--- a/week16.html
+++ b/week16.html
@@ -68,7 +68,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (3)</b></font></td></tr>
 <tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
