--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16P</b></a><br>
+<a href="week16.html"><b>16</b></a>
+<a href="week17.html"><b>17P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -74,42 +75,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Randy(7)</font></td>
-    <td><font size=2>12</font></td>
+    <td><font size=2>13</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>10085</font></td>
-    <td><font size=2>7735</font></td>
+    <td><font size=2>10665</font></td>
+    <td><font size=2>8225</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>10390</font></td>
-    <td><font size=2>9230</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>10880</font></td>
+    <td><font size=2>9810</font></td>
     <td><font size=2>1095</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>5</font></td>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9450</font></td>
+    <td><font size=2>8440</font></td>
+    <td><font size=2>865</font></td>
+    <td><font size=2>225</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>States(5)</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8565</font></td>
-    <td><font size=2>8400</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9110</font></td>
+    <td><font size=2>9005</font></td>
     <td><font size=2>1060</font></td>
     <td><font size=2>230</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8585</font></td>
-    <td><font size=2>8265</font></td>
-    <td><font size=2>850</font></td>
-    <td><font size=2>225</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9150</font></td>
-    <td><font size=2>10330</font></td>
+    <td><font size=2>9755</font></td>
+    <td><font size=2>10875</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td>
@@ -122,44 +123,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8160</font></td>
-    <td><font size=2>8005</font></td>
+    <td><font size=2>8755</font></td>
+    <td><font size=2>8600</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(4)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9635</font></td>
-    <td><font size=2>9060</font></td>
+    <td><font size=2>10430</font></td>
+    <td><font size=2>9425</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>10445</font></td>
-    <td><font size=2>10295</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>11040</font></td>
+    <td><font size=2>10890</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>4</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>7525</font></td>
-    <td><font size=2>9135</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>7890</font></td>
+    <td><font size=2>9930</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>12</font></td>
-    <td><font size=2>7140</font></td>
-    <td><font size=2>9225</font></td>
+    <td><font size=2>13</font></td>
+    <td><font size=2>7315</font></td>
+    <td><font size=2>10090</font></td>
     <td><font size=2>695</font></td>
-    <td><font size=2>320</font></td>
+    <td><font size=2>175</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
